modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5162,3 +5162,7 @@ highlight post css
     margin-left: 0;
     left: 248px;
 }
+
+.header-search-form-wrap .search-form, .search-wrap {
+    display: flex;
+}
