updated plugin `Smart Slider 3` version 3.4.1.8

--- a/wp-content/plugins/smart-slider-3/Nextend/SmartSlider3/Application/Admin/Preview/Template/Full.phtml
+++ b/wp-content/plugins/smart-slider-3/Nextend/SmartSlider3/Application/Admin/Preview/Template/Full.phtml
@@ -56,8 +56,14 @@ if (!empty($slidesData)) {
 
             function syncDeviceDetails() {
                 $sliders.each(function () {
-                    var slider = $(this).data('ss');
-                    syncDeviceDetailsSlider(slider);
+                    var match = $(this).attr('id').match(/n2-ss-([0-9]+)/);
+                    if (match) {
+                        n2ss.ready(match[1], function (slider) {
+                            slider.stages.done('Show', function () {
+                                syncDeviceDetailsSlider(slider);
+                            });
+                        });
+                    }
                 });
             }
 
