--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -1167,9 +1167,14 @@
 		display: none;
 	}
 	
+	.site-header-cart {
+		display: grid;
+	}
+	
 	.header-woo-links-wrap {
-		padding: 15px 0px 0px 50px;
     	font-size: 13pt;
+		text-align: center;
+   		margin-top: 7px;
 	}
 	
 	.header-search-form-wrap {
@@ -1188,6 +1193,7 @@
 		float: left;
 		margin: 0 auto;
 	}
+	
 	
 }
 
