modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style.css
+++ b/wp-content/themes/shopay/style.css
@@ -5165,3 +5165,7 @@ highlight post css
 .header-search-form-wrap .search-form label {
 	width: 100%;
 }
+
+.search-bar-section-wrapper {
+    margin-top: 15px;
+}
