modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -230,6 +230,10 @@
   .shopay_category_products .product-btns-wrap a.wishlist-button {
       width: 50%;
   }
+	
+	.main-category-list-title {
+    	padding: 18px 0;
+	}
 
 }
 
