modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -43,6 +43,12 @@
   }
 }
 
+@media (max-width: 1440px) {
+	.main-category-list-title {
+		padding: 7px 0;
+	}
+}
+
 @media (max-width: 1400px) {
   .mt-container {
     width: auto;
