--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,5 +1,14 @@
 /* APARENCIA */
 
+/* Foto anuncio*/
+#media_image-3 img{
+	width:90%;
+	height:200px;
+}
+
+
+/*  Fim foto anucio*/
+
 #site-navigation #menu-principal-semchilique ul li {
     display: inline-block;
     position: relative;
