modified theme `Shopay` version 1.1.1
	Conflict: wp-content/themes/shopay/style2.css [local version]

--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,13 +1,7 @@
 /* APARENCIA */
-/* Pag de cadastro*/
-
-/*  Fim pag de finalizacao de compra*/
-
-.elementor-element.elementor-button-danger .elementor-button {
-	background-color:#fe80a6!important;
-}
-.elementor-element.elementor-button-danger .elementor-button:hover {
-	background-color:pink!important;
+/*barra lateral pagina de produtos */
+.widget-area .widget{
+	width:75%;
 }
 
 /*Fim barra lateral pag de produtos  */
