--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,7 +1,7 @@
 /* APARENCIA */
 /*barra lateral pagina de produtos */
 .widget-area .widget{
-	width:90% !important;
+	width:75%;
 }
 
 /*Fim barra lateral pag de produtos  */
