modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,7 +1,7 @@
 /* APARENCIA */
 /*barra lateral pagina de produtos */
 .widget-area .widget{
-	width:75%;
+	width:75% !important;
 }
 
 /*Fim barra lateral pag de produtos  */
