modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -465,6 +465,10 @@
 	.home .main-category-list-title {
 		padding: 16px 0;
 	}
+	
+	.home .main-category-list-title {
+		padding: 14px 0;
+	}
 }
 
 @media (max-width: 980px) {
