--- a/wp-content/themes/shopay/style3.css
+++ b/wp-content/themes/shopay/style3.css
@@ -1,3 +1,47 @@
+.woocommerce-cart .woocommerce {
+  display: flex;
+}
+
+
+/* The table containing the list of products and our custom elements */
+.woocommerce-cart .woocommerce-cart-form {
+  flex: 1 0 70%; /* 100% at small screens; 70% on larger screens */
+  margin-right: 30px;
+}
+
+/* The element that contains the cart totals */
+.woocommerce-cart .cart-collaterals {
+  flex: 1 0 30%; /* 100% at small screens; 30% on larger screens */
+  margin-left: 30px;
+}
+
+/* Some minor tweak to make sure the cart totals fill the space */
+.woocommerce-cart .cart-collaterals .cart_totals {
+  width: 100%;
+  padding: 0 20px 70px;
+}
+
+/* The "Apply Coupon" button */
+.button[name="apply_coupon"] {
+  background-color: transparent;
+  color: #13aff0;
+}
+/* Fill the "Apply Coupon" button background color and underline it on hover */
+.button[name="apply_coupon"]:hover {
+  background-color: transparent;
+  text-decoration: underline;
+}
+ 
+/* The "Update Cart" button */
+.button[name="update_cart"] {
+  background-color: #e2e2e2;
+  color: #13aff0;
+}
+/* Brighten up the button on hover */
+.button[name="update_cart"]:hover {
+  filter: brightness(115%);
+}
+
 @media(min-width: 1100px) {
   .woocommerce-cart .woocommerce {
     display: flex;
