--- a/wp-content/themes/shopay/style3.css
+++ b/wp-content/themes/shopay/style3.css
@@ -1,79 +1,65 @@
-.woocommerce-cart .woocommerce {
-  display: flex;
+/******** SHOPPING CART PAGE - OVER 980 PX ONLY *****/
+
+@media screen and (min-width: 980px) {
+.checkout-button {
+    width: 100% !important;
+    float: right !important;
+      /***** Checkout Button, style how you would like *****/
+    color:#FFF !important;
+}
+.woocommerce-page.et_pb_button_helper_class button.button {
+    /***** Checkout Button, style how you would like *****/
+    color:#FFF !important;
 }
 
 
-/* The table containing the list of products and our custom elements */
-.woocommerce-cart .woocommerce-cart-form {
-  flex: 1 0 70%; /* 100% at small screens; 70% on larger screens */
-  margin-right: 30px;
+
+
+.cart_totals {
+    float: right !important;
+    width: 32% !important;
+    border: solid 2px #f2f2f2;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
-/* The element that contains the cart totals */
-.woocommerce-cart .cart-collaterals {
-  flex: 1 0 30%; /* 100% at small screens; 30% on larger screens */
-  margin-left: 30px;
+.woocommerce-cart .wc-proceed-to-checkout {
+    padding: 1em 0 0 0;
 }
 
-/* Some minor tweak to make sure the cart totals fill the space */
-.woocommerce-cart .cart-collaterals .cart_totals {
-  width: 100%;
-  padding: 0 20px 70px;
+.woocommerce-page.et_pb_button_helper_class a.button {
+    margin-bottom: 0px !important;
 }
 
-/* The "Apply Coupon" button */
-.button[name="apply_coupon"] {
-  background-color: transparent;
-  color: #13aff0;
-}
-/* Fill the "Apply Coupon" button background color and underline it on hover */
-.button[name="apply_coupon"]:hover {
-  background-color: transparent;
-  text-decoration: underline;
-}
- 
-/* The "Update Cart" button */
-.button[name="update_cart"] {
-  background-color: #e2e2e2;
-  color: #13aff0;
-}
-/* Brighten up the button on hover */
-.button[name="update_cart"]:hover {
-  filter: brightness(115%);
+
+
+.woocommerce table.shop_table {
+    float: left !important;
+    width: 63% !important;
 }
 
-@media(min-width: 1100px) {
-  .woocommerce-cart .woocommerce {
-    display: flex;
-  }
-  .woocommerce-cart .woocommerce-cart-form {
-    flex: 1 0 70%;
-    margin-right: 30px;
-  }    
-  .woocommerce-cart .cart-collaterals {
-    flex: 1 0 30%;
-    margin-left: 30px;
-  }
+
+.woocommerce-page table.cart td.actions .coupon {
+    float: left;
+    width: 100%;
 }
- 
-.button[name="apply_coupon"] {
-  background-color: transparent;
-  color: #13aff0;
+
+
+.woocommerce-page.et_pb_button_helper_class button.button, .woocommerce button.button:disabled, .woocommerce button.button:disabled[disabled] {
+    width: 60%;
+    margin-bottom: 10px;
 }
- 
-.button[name="apply_coupon"]:hover {
-  text-decoration: underline;
-  background-color: transparent;
-  color: #13aff0;
+
+
+
+
+/***** Heading, change according to taste ***/
+.cart_totals h2, .shipping_calculator h2 {
+    background-color: #2e4960 !important;
+    color: #FFF !important;
+    padding: 5px !important;
+    text-align: center !important;
+    border-radius: 3px !important;
+    margin-bottom: 0px !important;
 }
- 
-.button[name="update_cart"] {
-  background-color: #e2e2e2;
-  color: #13aff0;
-}
- 
-.button[name="update_cart"]:hover {
-  background-color: #e2e2e2;
-  color: #13aff0;
-  filter: brightness(115%);
 }
