--- a/wp-content/themes/shopay/style3.css
+++ b/wp-content/themes/shopay/style3.css
@@ -77,3 +77,69 @@
   color: #13aff0;
   filter: brightness(115%);
 }
+
+/******** SHOPPING CART PAGE - OVER 980 PX ONLY *****/
+
+@media screen and (min-width: 980px) {
+	.checkout-button {
+		width: 100% !important;
+		float: right !important;
+		  /***** Checkout Button, style how you would like *****/
+		color:#FFF !important;
+	}
+	.woocommerce-page.et_pb_button_helper_class button.button {
+		/***** Checkout Button, style how you would like *****/
+		color:#FFF !important;
+	}
+
+
+
+
+	.cart_totals {
+		float: right !important;
+		width: 32% !important;
+		border: solid 2px #f2f2f2;
+		margin-bottom: 0px;
+		padding-bottom: 0px;
+	}
+
+	.woocommerce-cart .wc-proceed-to-checkout {
+		padding: 1em 0 0 0;
+	}
+
+	.woocommerce-page.et_pb_button_helper_class a.button {
+		margin-bottom: 0px !important;
+	}
+
+
+
+	.woocommerce table.shop_table {
+		float: left !important;
+		width: 63% !important;
+	}
+
+
+	.woocommerce-page table.cart td.actions .coupon {
+		float: left;
+		width: 100%;
+	}
+
+
+	.woocommerce-page.et_pb_button_helper_class button.button, .woocommerce button.button:disabled, .woocommerce button.button:disabled[disabled] 		{
+		width: 60%;
+		margin-bottom: 10px;
+	}
+
+
+
+
+	/***** Heading, change according to taste ***/
+	.cart_totals h2, .shipping_calculator h2 {
+		background-color: #2e4960 !important;
+		color: #FFF !important;
+		padding: 5px !important;
+		text-align: center !important;
+		border-radius: 3px !important;
+		margin-bottom: 0px !important;
+	}
+}
